# wtutils

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini  render_wtsettings  requirements.txt  setup.cfg
tests/: fixtures.py  test_database.py
wtsettings/: __init__.py  __main__.py  configuration.py  database.py  db.py  schemas.py  settings.yaml
