[metadata]
# keyworks to `setuptools.setup` ( which is now used in favor of the `distutils` equivalent.
authors =
	Adrian Cederberg
name = wtutils
version = 0.0.0
description = Some tools to make managing the windows terminal settings less terrible.
long_description = file: README.md
keywords = pydantic, cli, yaml
liscense = No
classifiers =
	Framework :: FastApi
	Programming Language :: Python :: 3.10

[options]
packages = find:

[options.packages.find]
# Read the [uerguide for package discovery](https://setuptools.pypa.io/en/latest/userguide/package_discovery.html)
include =
	wtsettings*

[options.entry_points]
# Read the [userguide for entrypoints](https://setuptools.pypa.io/en/latest/userguide/entry_point.html)
console_scripts =
	wtsettings = wtsettings.__main__:main

[flake8]
# Read the [enumeration of available properties](https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-color).
indent-size = 4
hang-closing = True
color = always
filename = **/*.py
ignore = 
	E133 # Stupid closing backet requires indentation
	E701 # Multiple statements on one line.
	E702 # Multiple statements on one line.
	E703 # Multiple statements on one line.
	E704 # Multiple statements on one line.
	E501 # Line too long

[mypy]
plugins = sqlalchemy.ext.mypy.plugin

